Alignment fix for Costing Page expense table headers

--- a/src/scenes/Assessment/components/AssessmentMain/AssessmentMain.scss
+++ b/src/scenes/Assessment/components/AssessmentMain/AssessmentMain.scss
@@ -123,7 +123,7 @@
   /*align-items: center;*/
 }
 
-.expenseRowSelect {
+.expenseRowSelect, .expenseRowFake {
   flex: 1 0 0;
 }
 
@@ -137,6 +137,7 @@
   padding: 5px;
   flex: 2 0 0px;
   max-width: 20%;
+  text-align: right;
 }
 
 .expenseRowAction {
